syntax = "proto3";


package com.beansmith;

message KevValuePair {
  string key = 1;
  DataValue value = 2;
}

message DataValue {
  oneof value {
    bool  bool_value = 1;
    float float_value = 2;
    int32 int_value = 3;
    double  double_value = 4;
    int64 long_value = 5;
    bytes bytes_value = 6;
    string string_value = 7;
  }
}

message EntityData {
  string name = 1;
  repeated KevValuePair kvp = 2;
  repeated EntityData child = 3;
}
